@@ -6,3 +6,4 @@
 4. Asynchronous I/O latency to a solid-state disk greatly increased
 5. NOATIME and NODIRATIME by default
 6. Enabled aggressive multi-core power savings
+7. Dynamic readahead support
